Crash when current frame is used as driver #87688

Closed
opened 2021-04-21 20:50:20 +02:00 by Lloyd · 12 comments

System Information
Operating system: Linux-4.15.0-142-generic-x86_64-with-glibc2.27 64 Bits
Graphics card: Mesa DRI Intel(R) HD Graphics 3000 (SNB GT2) Intel Open Source Technology Center 3.3 (Core Profile) Mesa 20.0.8

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-04-19 20:49, hash: 795f024558
Worked: 2.93 FrameDriverBug.blend

Caused by eb06ccc324

Short description of error
Blender crashes when #frame is used as driver in Geometry Nodes.

Exact steps for others to reproduce the error

  • Add a Geometry Node modifier to an object
  • Switch to the Geometry Node editor and add a Value node
  • Type #frame into the input field
  • Play the animation or change the current frame
**System Information** Operating system: Linux-4.15.0-142-generic-x86_64-with-glibc2.27 64 Bits Graphics card: Mesa DRI Intel(R) HD Graphics 3000 (SNB GT2) Intel Open Source Technology Center 3.3 (Core Profile) Mesa 20.0.8 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-04-19 20:49, hash: `795f024558` Worked: 2.93 [FrameDriverBug.blend](https://archive.blender.org/developer/F10031612/FrameDriverBug.blend) Caused by eb06ccc324 **Short description of error** Blender crashes when `#frame` is used as driver in Geometry Nodes. **Exact steps for others to reproduce the error** - Add a Geometry Node modifier to an object - Switch to the Geometry Node editor and add a *Value* node - Type `#frame` into the input field - Play the animation or change the current frame
Author

Added subscriber: @LloydAlmeida

Added subscriber: @LloydAlmeida

#87695 was marked as duplicate of this issue

#87695 was marked as duplicate of this issue

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

The const AnimData *adt = BKE_animdata_from_id(id); is NULL and is dereferenced in if (adt->driver_array).

BKE_animsys_eval_driver(Depsgraph * depsgraph, ID * id, int driver_index, FCurve * fcu_orig) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenkernel/intern/anim_sys.c:3074)
blender::deg::DepsgraphNodeBuilder::<lambda(Depsgraph*)>::operator()(Depsgraph *) const(const blender::deg::DepsgraphNodeBuilder::<lambda(Depsgraph*)> * const __closure, Depsgraph * depsgraph) (/home/dev/01-data/01-git/blender-git/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1038)
std::_Function_handler<void(Depsgraph*), blender::deg::DepsgraphNodeBuilder::build_driver(ID*, FCurve*, int)::<lambda(Depsgraph*)> >::_M_invoke(const std::_Any_data &, Depsgraph *&&)(const std::_Any_data & __functor,  __args#0) (/usr/include/c++/9/bits/std_function.h:300)
std::function<void (Depsgraph*)>::operator()(Depsgraph*) const(const std::function<void(Depsgraph*)> * const this,  __args#0) (/usr/include/c++/9/bits/std_function.h:688)
blender::deg::(anonymous namespace)::evaluate_node(const blender::deg::(anonymous namespace)::DepsgraphEvalState * state, blender::deg::OperationNode * operation_node) (/home/dev/01-data/01-git/blender-git/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:113)
blender::deg::(anonymous namespace)::deg_task_run_func(TaskPool * pool, void * taskdata) (/home/dev/01-data/01-git/blender-git/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:124)
Task::operator()() const::{lambda()#1}::operator()() const(const Task::<lambda()> * const __closure) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/task_pool.cc:118)
tbb::interface7::internal::delegated_function<Task::operator()() const::{lambda()#1} const, void>::operator()() const(const tbb::interface7::internal::delegated_function<const Task::operator()() const::<lambda()>, void> * const this) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task_arena.h:96)
tbb::interface7::internal::isolate_within_arena(tbb::interface7::internal::delegate_base&, long) (Unknown Source:0)
tbb::interface7::internal::isolate_impl<void, Task::operator()() const::{lambda()#1} const>(Task::operator()() const::{lambda()#1} const&)(const Task::<lambda()> & f) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task_arena.h:216)
tbb::interface7::this_task_arena::isolate<Task::operator()() const::{lambda()#1}>(tbb::interface7::internal::return_type_or_void const&)(const Task::<lambda()> & f) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task_arena.h:472)
Task::operator()(const Task * const this) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/task_pool.cc:118)
tbb::internal::function_task<Task>::execute(tbb::internal::function_task<Task> * const this) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task.h:1059)
tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::process_bypass_loop(tbb::internal::context_guard_helper<false>&, tbb::task*, long) (Unknown Source:0)
tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::local_wait_for_all(tbb::task&, tbb::task*) (Unknown Source:0)
tbb::task::wait_for_all(tbb::task * const this) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task.h:820)
tbb::internal::task_group_base::wait(tbb::internal::task_group_base * const this) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task_group.h:168)
tbb_task_pool_work_and_wait(TaskPool * pool) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/task_pool.cc:253)
BLI_task_pool_work_and_wait(TaskPool * pool) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/task_pool.cc:502)
blender::deg::deg_evaluate_on_refresh(blender::deg::Depsgraph * graph) (/home/dev/01-data/01-git/blender-git/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:397)
The `const AnimData *adt = BKE_animdata_from_id(id);` is `NULL` and is dereferenced in `if (adt->driver_array)`. ```lines BKE_animsys_eval_driver(Depsgraph * depsgraph, ID * id, int driver_index, FCurve * fcu_orig) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenkernel/intern/anim_sys.c:3074) blender::deg::DepsgraphNodeBuilder::<lambda(Depsgraph*)>::operator()(Depsgraph *) const(const blender::deg::DepsgraphNodeBuilder::<lambda(Depsgraph*)> * const __closure, Depsgraph * depsgraph) (/home/dev/01-data/01-git/blender-git/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1038) std::_Function_handler<void(Depsgraph*), blender::deg::DepsgraphNodeBuilder::build_driver(ID*, FCurve*, int)::<lambda(Depsgraph*)> >::_M_invoke(const std::_Any_data &, Depsgraph *&&)(const std::_Any_data & __functor, __args#0) (/usr/include/c++/9/bits/std_function.h:300) std::function<void (Depsgraph*)>::operator()(Depsgraph*) const(const std::function<void(Depsgraph*)> * const this, __args#0) (/usr/include/c++/9/bits/std_function.h:688) blender::deg::(anonymous namespace)::evaluate_node(const blender::deg::(anonymous namespace)::DepsgraphEvalState * state, blender::deg::OperationNode * operation_node) (/home/dev/01-data/01-git/blender-git/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:113) blender::deg::(anonymous namespace)::deg_task_run_func(TaskPool * pool, void * taskdata) (/home/dev/01-data/01-git/blender-git/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:124) Task::operator()() const::{lambda()#1}::operator()() const(const Task::<lambda()> * const __closure) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/task_pool.cc:118) tbb::interface7::internal::delegated_function<Task::operator()() const::{lambda()#1} const, void>::operator()() const(const tbb::interface7::internal::delegated_function<const Task::operator()() const::<lambda()>, void> * const this) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task_arena.h:96) tbb::interface7::internal::isolate_within_arena(tbb::interface7::internal::delegate_base&, long) (Unknown Source:0) tbb::interface7::internal::isolate_impl<void, Task::operator()() const::{lambda()#1} const>(Task::operator()() const::{lambda()#1} const&)(const Task::<lambda()> & f) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task_arena.h:216) tbb::interface7::this_task_arena::isolate<Task::operator()() const::{lambda()#1}>(tbb::interface7::internal::return_type_or_void const&)(const Task::<lambda()> & f) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task_arena.h:472) Task::operator()(const Task * const this) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/task_pool.cc:118) tbb::internal::function_task<Task>::execute(tbb::internal::function_task<Task> * const this) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task.h:1059) tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::process_bypass_loop(tbb::internal::context_guard_helper<false>&, tbb::task*, long) (Unknown Source:0) tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::local_wait_for_all(tbb::task&, tbb::task*) (Unknown Source:0) tbb::task::wait_for_all(tbb::task * const this) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task.h:820) tbb::internal::task_group_base::wait(tbb::internal::task_group_base * const this) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task_group.h:168) tbb_task_pool_work_and_wait(TaskPool * pool) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/task_pool.cc:253) BLI_task_pool_work_and_wait(TaskPool * pool) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/task_pool.cc:502) blender::deg::deg_evaluate_on_refresh(blender::deg::Depsgraph * graph) (/home/dev/01-data/01-git/blender-git/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:397) ```
Robert Guetzkow changed title from blender crashes when #frame used as Driver in Geo Nodes to Crash when current frame is used as driver in Geometry Nodes 2021-04-21 21:14:22 +02:00
Author

Just built master locally and it works ??

Just built master locally and it works ??

I've checked again and it is still broken. Dereferencing a NULL-pointer is undefined behavior, so it doesn't necessarily have to result in a crash.

I've checked again and it is still broken. Dereferencing a NULL-pointer is undefined behavior, so it doesn't necessarily have to result in a crash.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

It is not just Geometry nodes, this is broken everywhere.

It is not just Geometry nodes, this is broken everywhere.
Philipp Oeser changed title from Crash when current frame is used as driver in Geometry Nodes to Crash when current frame is used as driver 2021-04-22 09:34:21 +02:00

Added subscriber: @zanqdo

Added subscriber: @zanqdo

This issue was referenced by bbb52a462e

This issue was referenced by bbb52a462ef91c9f84f673102b851a897b5968ac
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Falk David self-assigned this 2021-04-22 19:03:30 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87688
No description provided.